--- a/ACS/ACS_Volvo/backend/package.json
+++ b/ACS/ACS_Volvo/backend/package.json
@@ -25,7 +25,8 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
     "sharp": "^0.34.2",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
