--- a/ACS/ACS_Volvo/backend/package.json
+++ b/ACS/ACS_Volvo/backend/package.json
@@ -6,6 +6,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "install:frontend": "npm --prefix ../frontend install",
+    "build:frontend": "npm --prefix ../frontend run build",
+    "start:with-frontend": "npm run build:frontend && npm start",
     "start:old": "node index.js",
     "dev:old": "nodemon index.js"
   },
